test_regress/t/t_unpacked_concat_bad2.out
%Error: t/t_unpacked_concat_bad2.v:20:15: Array initialization has too many elements. 2 elements are expected, but at least 5 elements exist.
   20 |       s1 = {s0, s2};
      |               ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_unpacked_concat_bad2.v:21:23: Array initialization has too many elements. 4 elements are expected, but at least 5 elements exist.
   21 |       s2 = {s1, s0, s0, s0};
      |                       ^
%Error: t/t_unpacked_concat_bad2.v:23:17: Item is incompatible with the array type.
   23 |       s2 = {s0, s3};
      |                 ^~
%Error: t/t_unpacked_concat_bad2.v:25:19: Item is incompatible with the array type.
   25 |       A9_logic = {A3, 4, 5, A3, 6};
      |                   ^~
%Error: Exiting due to
